# Game

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Gametest.sln  Gametest.vcxproj  Gametest.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.cache/clangd/index/: context.c.71AD178B7023FD06.idx  egl_context.c.8E26D86FCE3F0C50.idx  glad.c.3BCF47434EAAA177.idx  glad.h.768AED6F4A36B864.idx  glad.h.AC33A4B27C4ECB95.idx  glfw3.h.FB4B7E6303241EA6.idx  glfw3native.h.9FBD5F6AFBBB33C2.idx  init.c.F51F6278BFED12FF.idx  input.c.D324C96570488FA5.idx  internal.h.58F32587E5CF283F.idx  main.c.0CDDDFDC00571094.idx  mappings.h.3BC7BD8E80BA4460.idx  monitor.c.0B27C1C6A560E160.idx  null_init.c.1215C22DE8F02B94.idx  null_joystick.c.98C61A22C8E4A25E.idx  null_joystick.h.184A28D3C29BE577.idx  null_monitor.c.59437EBF45FCBAB6.idx  null_platform.h.FBA7B4F300CE1AC8.idx  null_window.c.28A9280BDE8B4EFA.idx  osmesa_context.c.EDA13D43243EE602.idx  platform.c.ACF2D097DD7B5A85.idx  platform.h.37EC1FC405F300D2.idx  triangle.c.8B1037169F2F354F.idx  vulkan.c.F13951254F7577E2.idx  wgl_context.c.2C46E2DE17E27627.idx  win32_init.c.3BEB37412FA73B56.idx  win32_joystick.c.D15FBD8CDD4E7836.idx  win32_joystick.h.5BBFC2F2939F3616.idx  win32_module.c.C7A9EAEAAF617BB9.idx  win32_monitor.c.4732D5AC2BA68C0D.idx  win32_platform.h.49DF62A0B274C575.idx  win32_thread.c.9F66FB30908D8444.idx  win32_thread.h.109E200367ADDB9F.idx  win32_time.c.795395B92C75981E.idx  (+4 more)
src/: main.c  triangle.c  window.h
src/glad/: CMakeLists.txt
(+2 files in other folders)
